--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish:
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
