--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,7 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Create links file
-        run: |
-          touch js/links.js
-          echo 'var HRB = `https://google.com`;' >> js/links.js
+        run: touch js/links.js
+        run: echo 'var HRB = `https://google.com`;' >> js/links.js
 
