--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,5 +13,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Create links file
         run: touch js/links.js
-        run: echo 'var HRB = `https://google.com`;' >> js/links.js
+      - run: echo 'var HRB = `https://google.com`;' >> js/links.js
 
