--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Create links file
-        run: touch js/links.js
-      - run: echo 'var HRB = `https://google.com`;' >> js/links.js
+        uses: 1arp/create-a-file-action@0.2
+        with:
+          path: 'js'
+          file: 'links.js'
+          content: |
+            var HRB = `https://google.com`;
+
 
