--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
           path: 'js'
           file: 'links.js'
           content: |
-            var HRB = `https://google.com`;
+            "var HRB = `https://google.com`;"
       - name: Create links file 2
         uses: "finnp/create-file-action@master"
           env:
