--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,16 +5,14 @@ on:
     branches: [ master ]
 
 jobs:
-  publish:
+  deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Create links file 2
-        uses: "finnp/create-file-action@master"
-          env:
-            FILE_NAME: "js/links.js"
-            FILE_DATA: "var HRB = `https://google.com`;"
-
-
+      - uses: "finnp/create-file-action@master"
+        env:
+          FILE_NAME: "js/links.js"
+          FILE_DATA: "var HRB = `https://google.com`;"
